--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
 <title>Jquery Connecting Line</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
-
 </head>
 
 <body>
@@ -19,12 +18,15 @@
 <script type="text/javascript" src="required/script/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="required/script/jquery.connectingLine.js"></script>
 <script type="text/javascript" src="scripts/jquery-ui-1.10.4.custom.min.js"></script>
+
 <script type="text/javascript">
 	var mySVG = $('body').connectSVG();
 		mySVG.drawLine({
 			left_node:'.node1',
 			right_node:'.node2',
 			horizantal_gap:10,
+			error:true,
+			width:1
 		});
 		$( ".node1" ).draggable({
 		  drag: function(event, ui){mySVG.redrawLines();}
