connectSvg is now connect
No more svg depandancies there. Its all canvas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="scripts/jquery-ui-1.10.4.custom.min.js"></script>
 
 <script type="text/javascript">
-	var mySVG = $('body').connectSVG();
+	var mySVG = $('body').connect();
 		mySVG.drawLine({
 			left_node:'.node1',
 			right_node:'.node2',
